# wx250s_arm_manipulation

./: ReadMe.md  wx250s_arm_moveit_servo.usd
src/gripper_joint_state/: CMakeLists.txt  package.xml
src/gripper_joint_state/launch/: topic_convertor.launch.py
src/gripper_joint_state/scripts/: convertor.py
src/wx250s_description/: CMakeLists.txt  package.xml
src/wx250s_description/drawer_meshes/DAE/box/: box.dae
src/wx250s_description/drawer_meshes/DAE/drawer/: drawer.dae
src/wx250s_description/drawer_meshes/DAE/handle/: handle.dae
src/wx250s_description/drawer_meshes/STL/box/: box.stl
src/wx250s_description/drawer_meshes/STL/drawer/: drawer.stl
src/wx250s_description/drawer_meshes/STL/handle/: handle.stl
src/wx250s_description/launch/: robot_state_publisher.launch.py
src/wx250s_description/meshes/DAE/base/: base.dae
src/wx250s_description/meshes/DAE/finger/: gripper_finger.dae
src/wx250s_description/meshes/DAE/forearm/: forearm.dae
src/wx250s_description/meshes/DAE/gripper/: gripper.dae  gripper_old.dae
src/wx250s_description/meshes/DAE/gripper_bar/: gripper_bar.dae  gripper_bar_old.dae
src/wx250s_description/meshes/DAE/lower_forearm/: lower_forearm.dae
src/wx250s_description/meshes/DAE/shoulder/: shoulder.dae
src/wx250s_description/meshes/DAE/upper_arm/: upper_arm.dae
src/wx250s_description/meshes/DAE/upper_forearm/: upper_forearm.dae
src/wx250s_description/meshes/DAE/wrist/: wrist.dae
src/wx250s_description/urdf/: drawer_box.urdf  drawer_box.xacro  wx250s.xacro
src/wx250s_description/urdf/drawer_box/: drawer_box.usd
(+52 files in other folders)
