<?xml version="1.0"?>
<package format="3">
  <name>wx250s_description</name>
  <version>3.0.0</version>
  <description>wx250s Resources used for MoveIt testing</description>
  <maintainer email="robotmania@hoge.com">Robot Mania</maintainer>

  <license>BSD</license>
  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit-resources/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit-resources</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
